update config code
